# familiar-schema

./: .cursorrules  .gitignore  README.md  SCHEMA_TO_RUST_PIPELINE_ANALYSIS.md  catalog-info.yaml  mkdocs.yml  package-search.js  sonar-project.properties  system-catalog.yaml
src/familiar_schemas/: README.md  pyproject.toml  pytest.ini  run_contract_tests.py  test_runner.py
src/familiar_schemas/familiar_schemas/: __init__.py  pyproject.toml
src/familiar_schemas/familiar_schemas/components/: BondContent.py  BondPhysicsConfig.py  BondTension.py  ConsolidationState.py  CrossTenantLink.py  EntanglementState.py  FilamentContent.py  FocusContent.py  GDPRDependency.py  InstanceComponent.py  IntentContent.py  MemoryManifoldPosition.py  MomentContent.py  MotifContent.py  QuantumState.py  TaskStatus.py  TemporalAnchor.py  TenantConfig.py  TenantIdentity.py  TenantMembers.py  ThreadContent.py  UniversalPhysicsState.py  __init__.py
src/familiar_schemas/familiar_schemas/entities/: Bond.py  Filament.py  Focus.py  GenericThread.py  Intent.py  Moment.py  Motif.py  PersonThread.py  Stitch.py  Tenant.py  Thread.py  __init__.py
src/familiar_schemas/familiar_schemas/events/: BondStateChangeRequested.py  MomentAccessed.py  ThreadStateChangeRequested.py  __init__.py
src/familiar_schemas/familiar_schemas/laws/: BondTensionDynamics.py  MemoryConsolidation.py  MotifCollapse.py  ThreadEnergyDecay.py  __init__.py
src/familiar_schemas/familiar_schemas/payloads/: CoursePayload.py  DraftPayload.py  ReconciliationResultPayload.py  ShuttlePayload.py  StitchInteractionRequest.py  StitchInteractionResponse.py  WeavePayload.py  WeaveUnitPayload.py  __init__.py
src/familiar_schemas/familiar_schemas/snippets/: AbstractionLevel.py  AccessType.py  Aliases.py  AnyValue.py  BondEvent.py  BondPermissions.py  BondState.py  BondStateReason.py  CognitiveBaseline.py  CognitivePerspective.py  ColumnDefinition.py  CompletedAt.py  ComplexNumber.py  ConsolidationLevel.py  ConsolidationRate.py  ConstraintDefinition.py  CreatedAt.py  DecayRate.py  DensityMatrix.py  Description.py  DissonanceType.py  DueDate.py  EffectiveAt.py  EndDate.py  Energy.py  EntanglementMap.py  Label.py  (+42 more)
src/familiar_schemas/scripts/: fix_all_rust_warnings.py  generate_comprehensive_pydantic.py  generate_pydantic.py  generate_rust_with_typify.py
src/familiar_schemas/test-reports/: contract-summary.json  contract-tests.xml
src/familiar_schemas/tests/: test_contracts.py  test_final_contracts.py
(+218 files in other folders)
